--- a/index.html
+++ b/index.html
@@ -1,143 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="icon" type="svg" href="assets/pom.svg"/>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="svg" href="assets/pom.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&family=Work+Sans:wght@400;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600&family=Work+Sans:wght@400;700&display=swap"
         rel="stylesheet">
     <title>schmooz | Make the most out of your time</title>
+
+
 </head>
+
 <body>
     <!-- logo & nav -->
-    <nav id="logos">
-        <div class="logoContainer">
-        <img class="logoImg" src="assets/pom_blank.svg">
-        <img class="logoImg" src="assets/Schmooz.svg">
-        </div>
-    </nav>
+    <div id="headerImage">
+        <svg viewBox="0 0 1437 459" preserveAspectRatio="xMinYMin meet">
+            <image x=314 y=-1 href="assets/hill.svg" />
+            <image x=750 y=80 href="assets/banner-image.svg" />
+            <image x=0 y=441 href="assets/rectangleHeader.svg" />
+            <image x=32 y=40 href="assets/logo.svg" />
+            <image x=100 y=40 xlink:href="assets/schmoozText.svg" />
+            <image x=180 y=180 xlink:href="assets/tagLine.svg" />
+
+
+
+        </svg>
+    </div>
     <!-- content -->
-<div class="bodyflex">
-<div class="sections">
-    <section class="content">
-        <img class="cardpicture" src="assets/time_management.svg">
-        <div class="contentSectionContent">
-        <p>Create sessions based on your availability</p>
+    <p class="centerText">Our mission is to facilitate deeper connections between creators and their communities.
+        We want to make world changing coversations easier and more accessible.</p>
+    <div class="bodyflex">
+        <div class="sections">
+            <section class="content">
+                <img class="cardpicture" src="assets/time_management.svg">
+                <div class="contentSectionContent">
+                    <p class="centerText">Create sessions based on your availability</p>
+                </div>
+            </section>
+            <section class="content">
+                <img class="cardpicture" src="assets/online_payments.svg">
+                <div class="contentSectionContent">
+                    <p class="centerText">View users bid on your available sessions</p>
+                </div>
+            </section>
+
+            <section class="content">
+                <img class="cardpicture" src="assets/SchmoozSession.svg">
+                <div class="contentSectionContent">
+                    <p class="centerText">Meet with session winners on a secure video call</p>
+                </div>
+            </section>
+
         </div>
-    </section>
+    </div>
+    <!-- form -->
+    <aside class="mailinglist">
+        <div id="asideMini">
+            <h2 class="asideHeader">Sign up for Updates!</h2>
+            <!-- <img size src="assets/mail_sent.svg" id="asideImg" /> -->
+            <!-- Begin Mailchimp Signup Form -->
+            <p class="centerText">We would love to keep you updated with our development progress!</p>
+            <div id="mc_embed_signup">
+                <form
+                    action="https://app.us20.list-manage.com/subscribe/post?u=6f96ddef3e7d4a0e74013600a&amp;id=7133eda1eb"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank" validate>
+                    <div id="mc_embed_signup_scroll">
 
-        <section class="content">
-            <img class="cardpicture"  src="assets/online_payments.svg">
-            <div class="contentSectionContent">
-                <p>View users bid on your available sessions</p>
-            </div>
-        </section>
+                        <div class="mc-field-group">
+                            <label for="mce-FNAME">First Name<span class="asterisk">*</span>
+                            </label>
+                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                        </div>
+                        <div class="mc-field-group">
+                            <label for="mce-LNAME">Last Name<span class="asterisk">*</span>
+                            </label>
+                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                        </div>
+                        <div class="mc-field-group">
+                            <label for="mce-EMAIL">Email Address<span class="asterisk">*</span>
+                            </label>
+                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                        </div>
+                        <!-- <div class="mc-field-group size1of2">
+                            <label for="mce-PHONE">Phone Number </label>
+                            <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
+                        </div>
+                        <div class="mc-field-group">
+                            <label for="mce-COUNTRY">Country </label>
+                            <input type="text" value="" name="COUNTRY" class="" id="mce-COUNTRY">
+                        </div>
+                        <div class="mc-field-group">
+                            <label for="mce-COUNTRY">Are you a<span class="asterisk">*</span></label>
 
-        <section class="content">
-            <img class="cardpicture" src="assets/SchmoozSession.svg">
-            <div class="contentSectionContent">
-                <p>Meet with session winners on a secure video call</p>
-            </div>
-        </section>
+                        </div>
+                        <div class="mc-field-group">
+                            <input type="radio" value="Schmoozer" name="SEGMENT" id="mce-SEGMENT-0"><label
+                                for="mce-SEGMENT-0">Schmoozer - I
+                                want to engage with people I follow </label>
+                            <input type="radio" value="User" name="SEGMENT" id="mce-SEGMENT-1"><label
+                                for="mce-SEGMENT-1">Creator - I want to
+                                engage
+                                with my audience</label>
+                        </div> -->
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                name="b_6f96ddef3e7d4a0e74013600a_7133eda1eb" tabindex="-1" value=""></div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                                    class="button">
+                            </div>
+                        </div>
 
-</div>
-        <!-- form -->
-<div id="asideMini">
-<aside class="mailinglist">
-    <h2 class="asideHeader">Sign up for Updates!</h2>
-    <img size src="assets/mail_sent.svg" id="asideImg"/>
-    <!-- Begin Mailchimp Signup Form -->
-    <div id="mc_embed_signup">
-        <form action="https://app.us20.list-manage.com/subscribe/post?u=6f96ddef3e7d4a0e74013600a&amp;id=7133eda1eb"
-            method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-            target="_blank" validate>
-            <div id="mc_embed_signup_scroll">
-
-                <div class="mc-field-group">
-                    <label for="mce-FNAME">First Name <span class="asterisk">*</span>
-                    </label>
-                    <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
-                </div>
-                <div class="mc-field-group">
-                    <label for="mce-LNAME">Last Name <span class="asterisk">*</span>
-                    </label>
-                    <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
-                </div>
-                <div class="mc-field-group">
-                    <label for="mce-EMAIL">Email Address <span class="asterisk">*</span>
-                    </label>
-                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                </div>
-                <div class="mc-field-group size1of2">
-                    <label for="mce-PHONE">Phone Number </label>
-                    <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
-                </div>
-                <div class="mc-field-group">
-                    <label for="mce-COUNTRY">Country </label>
-                    <input type="text" value="" name="COUNTRY" class="" id="mce-COUNTRY">
-                </div>
-                <div class="mc-field-group input-group">
-                    <p>Primary Use? <span class="asterisk">*</span>
-                    </p>
-                    <ul>
-                        <li><input type="radio" value="Schmoozer" name="SEGMENT" id="mce-SEGMENT-0"><label
-                                for="mce-SEGMENT-0">Schmoozer</label></li>
-                        <li><input type="radio" value="User" name="SEGMENT" id="mce-SEGMENT-1"><label
-                                for="mce-SEGMENT-1">User</label></li>
-                    </ul>
-                </div>
-                <div id="mce-responses" class="clear foot">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                        name="b_6f96ddef3e7d4a0e74013600a_7133eda1eb" tabindex="-1" value=""></div>
-                <div class="optionalParent">
-                    <div class="clear foot">
-                        <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-                            class="button">
                     </div>
-                </div>
-                <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-
             </div>
+            <!--End mc_embed_signup-->
+    </aside>
     </div>
-    <!--End mc_embed_signup-->
-</aside>
-</div>
-    </div>
+
     <!-- footer for nav -->
     <footer class="footerContainer">
         <div class="footerWrap">
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle">Company</h2>
-                    <a class="footerLink" href="http://www.google.com"target="_blank"></a>
+                    <a class="footerLink" href="http://www.google.com" target="_blank">About</a>
                 </div>
             </div>
 
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle">Follow Us</h2>
-                    <a class="footerLink" href="http://www.google.com"target="_blank"></a>
+                    <a class="footerLink" href="http://www.google.com" target="_blank"></a>
                 </div>
             </div>
 
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle">Contact Us</h2>
-                    <a class="footerLink" href="http://wwww.google.com"target="_blank"></a>
+                    <a class="footerLink" href="http://wwww.google.com" target="_blank"></a>
                 </div>
             </div>
         </div>
-        <div class="copyWrap"><h2 class="copyright">© 2022 schmooz</h2>
-</div>
+        <div class="copyWrap">
+            <h2 class="copyright">© 2022 schmooz</h2>
+        </div>
     </footer>
     <script src="./js/index.js" type="module"></script>
 </body>
+
 </html>
