--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle">Company</h2>
-                    <a class="footerLink" href="http://www.google.com" target="_blank">About</a>
+                    <!-- <a class="footerLink" href="http://www.google.com" target="_blank">About</a> -->
                 </div>
             </div>
 
@@ -149,7 +149,7 @@
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle">Contact Us</h2>
-                    <a class="footerLink" href="http://wwww.google.com" target="_blank"></a>
+                    <a class="footerLink" href="mailto:rob@schmooz.com" target="_blank">E-mail</a>
                 </div>
             </div>
         </div>
