updating copy text

--- a/index.html
+++ b/index.html
@@ -33,8 +33,20 @@
         </svg>
     </div>
     <!-- content -->
-    <p class="centerText">Our mission is to facilitate deeper connections between creators and their communities.
-        We want to make world changing coversations easier and more accessible.</p>
+    <p class="copyTextMedium">Meet Schmooz, a new way for creators to build meaningful relationships with their fans and
+        potential customers. With
+        Schmooz you can talk about whatever's on your mind and know that your conversations are private, secure, and
+        private.
+    </p>
+    <p class="copyTextMedium">Schmooz is a system for creating deep connections with your followers on whatever social
+        network you choose. It's
+        never
+        been easier to have meaningful conversation with your fans, friends and colleagues. And that makes the world a
+        better
+        place.</p>
+    <p class="copyTextMedium">We are building user-focused social software. Our first product is a beautiful, powerful
+        platform that empowers creators
+        of all kinds to better connect with their communities and get things done together.</p>
     <div class="bodyflex">
         <div class="sections">
             <section class="content">
@@ -134,22 +146,28 @@
         <div class="footerWrap">
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle">Company</h2>
-                    <!-- <a class="footerLink" href="http://www.google.com" target="_blank">About</a> -->
+                    <h2 class="footerLinkTitle"><a class="footerLink" href="pages/about.html">About</a></h2>
                 </div>
             </div>
-
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle">Follow Us</h2>
-                    <a class="footerLink" href="http://www.google.com" target="_blank"></a>
+                    <h2 class="footerLinkTitle"><a class="footerLink" href="pages/privacy.html"
+                            target="_blank">Privacy</a></h2>
+
                 </div>
             </div>
-
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle">Contact Us</h2>
-                    <a class="footerLink" href="mailto:rob@schmooz.com" target="_blank">E-mail</a>
+                    <h2 class="footerLinkTitle" href="pages/terms.html"><a class="footerLink"
+                            href="pages/terms.html">Terms</a>
+                    </h2>
+                </div>
+            </div>
+            <div class="footerLinksWrapper">
+                <div class="footerLinkItems">
+                    <h2 class="footerLinkTitle"><a class="footerLink" href="mailto:rob@schmooz.com"
+                            target="_blank">Contact</a></h2>
+
                 </div>
             </div>
         </div>
