--- a/index.html
+++ b/index.html
@@ -26,46 +26,41 @@
             <image x=0 y=441 href="assets/rectangleHeader.svg" />
             <image x=32 y=40 href="assets/logo.svg" />
             <image x=100 y=40 xlink:href="assets/schmoozText.svg" />
-            <image x=180 y=180 xlink:href="assets/tagLine.svg" />
-
-
-
+            <text x=180 y=200 class="copyTextMedium">Don’t hit snooze. Hit Schmooz.
+            </text>
+            <text x=180 y=230 class="copyTextMedium">Make the most out of your time.
+            </text>
         </svg>
     </div>
     <!-- content -->
-    <p class="copyTextMedium">Meet Schmooz, a new way for creators to build meaningful relationships with their fans and
-        potential customers. With
-        Schmooz you can talk about whatever's on your mind and know that your conversations are private, secure, and
-        private.
-    </p>
-    <p class="copyTextMedium">Schmooz is a system for creating deep connections with your followers on whatever social
-        network you choose. It's
-        never
-        been easier to have meaningful conversation with your fans, friends and colleagues. And that makes the world a
-        better
-        place.</p>
-    <p class="copyTextMedium">We are building user-focused social software. Our first product is a beautiful, powerful
-        platform that empowers creators
-        of all kinds to better connect with their communities and get things done together.</p>
+
+    <div class="copyflex">
+        <p class="copyTextMedium">Meet Schmooz, a new way for creators to build meaningful relationships with their fans
+            and potential customers. It's never been easier to have meaningful conversation with your fans, friends and
+            colleagues.
+        </p>
+    </div>
+
     <div class="bodyflex">
+        <p class="copyTextLarge">How it works</p>
         <div class="sections">
             <section class="content">
                 <img class="cardpicture" src="assets/time_management.svg">
                 <div class="contentSectionContent">
-                    <p class="centerText">Create sessions based on your availability</p>
+                    <p class="copyTextMedium">Create sessions based on your availability</p>
                 </div>
             </section>
             <section class="content">
                 <img class="cardpicture" src="assets/online_payments.svg">
                 <div class="contentSectionContent">
-                    <p class="centerText">View users bid on your available sessions</p>
+                    <p class="copyTextMedium">View users bid on your available sessions</p>
                 </div>
             </section>
 
             <section class="content">
                 <img class="cardpicture" src="assets/SchmoozSession.svg">
                 <div class="contentSectionContent">
-                    <p class="centerText">Meet with session winners on a secure video call</p>
+                    <p class="copyTextMedium">Meet with session winners on a secure video call</p>
                 </div>
             </section>
 
@@ -74,7 +69,7 @@
     <!-- form -->
     <aside class="mailinglist">
         <div id="asideMini">
-            <h2 class="asideHeader">Sign up for Updates!</h2>
+            <p class="copyTextLarge">Sign up for Updates!</p>
             <!-- <img size src="assets/mail_sent.svg" id="asideImg" /> -->
             <!-- Begin Mailchimp Signup Form -->
             <p class="centerText">We would love to keep you updated with our development progress!</p>
@@ -149,13 +144,13 @@
                     <h2 class="footerLinkTitle"><a class="footerLink" href="pages/about.html">About</a></h2>
                 </div>
             </div>
-            <div class="footerLinksWrapper">
+            <!-- <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle"><a class="footerLink" href="pages/privacy.html"
                             target="_blank">Privacy</a></h2>
 
                 </div>
-            </div>
+            </div> -->
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle" href="pages/terms.html"><a class="footerLink"
