--- a/pages/about.html
+++ b/pages/about.html
@@ -24,29 +24,32 @@
         </div>
     </nav>
     <!-- content -->
-    <div class="bodyflex">
+    <div class="copyflex">
+        <p class="copyTextMedium">We are building Schmooz. It's going to be fun.
 
-
+        </p>
     </div>
+
     <!-- footer for nav -->
     <footer class="footerContainer">
         <div class="footerWrap">
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle"><a class="footerLink" href="pages/about.html">About</a></h2>
+                    <h2 class="footerLinkTitle">About</h2>
                 </div>
             </div>
-            <div class="footerLinksWrapper">
+            <!-- <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle"><a class="footerLink" href="pages/privacy.html"
                             target="_blank">Privacy</a>
                     </h2>
 
                 </div>
-            </div>
+            </div> -->
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle" href="pages/terms.html">Terms
+                    <h2 class="footerLinkTitle" href="pages/terms.html"><a class="footerLink"
+                            href="terms.html">Terms</a>
                     </h2>
                 </div>
             </div>
