--- a/pages/terms.html
+++ b/pages/terms.html
@@ -36,14 +36,14 @@
                     <h2 class="footerLinkTitle"><a class="footerLink" href="pages/about.html">About</a></h2>
                 </div>
             </div>
-            <div class="footerLinksWrapper">
+            <!-- <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle"><a class="footerLink" href="pages/privacy.html"
                             target="_blank">Privacy</a>
                     </h2>
 
                 </div>
-            </div>
+            </div> -->
             <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle" href="pages/terms.html">Terms
