--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="copyflex">
         <p class="copyTextMedium">Meet Schmooz, a new way for creators to build meaningful relationships with their fans
-            and potential customers. It's never been easier to have meaningful conversation with your fans, friends and
+            and potential customers. It's never been easier to have conversations with your fans, friends and
             colleagues.
         </p>
     </div>
