--- a/index.html
+++ b/index.html
@@ -36,34 +36,42 @@
 
     <div class="copyflex">
         <p class="copyTextMedium">Meet Schmooz, a new way for creators to build meaningful relationships with their fans
-            and potential customers. It's never been easier to have meaningful conversation with your fans, friends and
-            colleagues.
+            and potential customers. It's never been easier engage with your fans, and
+            followers.
         </p>
     </div>
 
     <div class="bodyflex">
         <p class="copyTextLarge">How it works</p>
         <div class="sections">
-            <section class="content">
-                <img class="cardpicture" src="assets/time_management.svg">
-                <div class="contentSectionContent">
-                    <p class="copyTextMedium">Create sessions based on your availability</p>
-                </div>
-            </section>
-            <section class="content">
-                <img class="cardpicture" src="assets/online_payments.svg">
-                <div class="contentSectionContent">
-                    <p class="copyTextMedium">View users bid on your available sessions</p>
-                </div>
-            </section>
+            <div class="row align-items-center justify-content-center">
+                <div class="col-sm-4">
+                    <div class="content"><img class="cardpicture" src="assets/time_management.svg">
+                        <div class="contentSectionContent">
+                            <p class="copyTextMedium">Create sessions based on your availability</p>
+                        </div>
+                    </div>
 
-            <section class="content">
-                <img class="cardpicture" src="assets/SchmoozSession.svg">
-                <div class="contentSectionContent">
-                    <p class="copyTextMedium">Meet with session winners on a secure video call</p>
                 </div>
-            </section>
+                <div class="col-sm-4 ">
+                    <div class="content">
+                        <img class="cardpicture" src="assets/online_payments.svg">
+                        <div class="contentSectionContent">
+                            <p class="copyTextMedium">View users bid on your available sessions</p>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="col-sm-4">
+                    <div class="content">
+                        <img class="cardpicture" src="assets/SchmoozSession.svg">
+                        <div class="contentSectionContent">
+                            <p class="copyTextMedium">Meet with session winners on a secure video call</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
     <!-- form -->
@@ -174,3 +182,13 @@
 </body>
 
 </html>
+
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
