--- a/index.html
+++ b/index.html
@@ -20,91 +20,114 @@
 <body>
     <!-- logo & nav -->
     <div id="headerImage">
-        <svg viewBox="0 0 1437 459" preserveAspectRatio="xMinYMin meet">
+        <svg fill="#FFFFFF" viewBox="0 0 1437 459" preserveAspectRatio="xMinYMin meet">
+            <rect width=100% height=100% fill="#256EFF"></rect>
+
             <image x=314 y=-1 href="assets/hill.svg" />
             <image x=750 y=80 href="assets/banner-image.svg" />
-            <image x=0 y=441 href="assets/rectangleHeader.svg" />
-            <image x=32 y=40 href="assets/logo.svg" />
-            <image x=100 y=40 xlink:href="assets/schmoozText.svg" />
-            <text x=180 y=200 class="copyTextMedium">Don’t hit snooze. Hit Schmooz.
+            <image x=0 y=442 href="assets/rectangleHeader.svg" />
+            <image class="logo" x=32 y=40 href="assets/logo.svg" />
+            <image class="slogan" x=100 y=40 xlink:href="assets/schmoozText.svg" />
+            <text class="slogan" x=180 y=200 font-size="2em" class="copyTextMedium">Don’t hit snooze. Hit Schmooz.
             </text>
-            <text x=180 y=230 class="copyTextMedium">Make the most out of your time.
+            <text class="slogan" x=180 y=220 font-size="1em" class="copyTextMedium">Make the most out of your time.
             </text>
         </svg>
     </div>
     <!-- content -->
+    <svg class="mobile-header" fill="white" viewBox="0 0 1437 459" preserveAspectRatio="xMinYMin meet">
+        <rect width=100% height=100% fill="#256EFF"></rect>
 
-    <div class="copyflex">
-        <p class="copyTextMedium">Meet Schmooz, a new way for creators to build meaningful relationships with their fans
-            and potential customers. It's never been easier engage with your fans, and
-            followers.
+        <image x=18% y=-20 class="mobile-header-text" xlink:href="assets/schmoozText.svg" />
+        <text x=30% y=340 class="mobile-header-text" font-size="3em">Don’t hit snooze. Hit Schmooz.
+        </text>
+        <text x=30% y=390 class="mobile-header-text" font-size="3em">Make the most out of your time.
+        </text>
+        <image class="logo" x=50 y=10 href="assets/logo.svg" />
+        <image x=0 y=441 href="assets/rectangleHeader.svg" />
 
-        </p>
-    </div>
+    </svg>
 
-    <div class="bodyflex">
-        <p class="copyTextLarge">How it works</p>
-        <div class="sections">
-            <div class="row align-items-center justify-content-center">
-                <div class="col-sm-4">
-                    <div class="content"><img class="cardpicture" src="assets/time_management.svg">
-                        <div class="contentSectionContent">
-                            <p class="copyTextMedium">Create sessions based on your availability</p>
+    <body>
+
+
+        <div class="copyflex">
+            <p class="copyTextMedium">Meet Schmooz,
+            </p>
+            <p class="copyTextMedium">A new way for creators to build meaningful relationships with their
+                fans
+                and potential customers.
+            </p>
+
+            <p class="copyTextMedium"> It's never been easier engage with your fans, and
+                followers.
+
+            </p>
+        </div>
+        </div>
+        <div class="bodyflex">
+            <p class="copyTextLarge">How it works</p>
+            <div class="sections">
+                <div class="row align-items-center justify-content-center">
+                    <div class="col-sm-4">
+                        <div class="content"><img class="cardpicture" src="assets/time_management.svg">
+                            <div class="contentSectionContent">
+                                <p class="copyTextMedium">Create sessions based on your availability</p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-4 ">
+                        <div class="content">
+                            <img class="cardpicture" src="assets/online_payments.svg">
+                            <div class="contentSectionContent">
+                                <p class="copyTextMedium">View users bid on your available sessions</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-4">
+                        <div class="content">
+                            <img class="cardpicture" src="assets/SchmoozSession.svg">
+                            <div class="contentSectionContent">
+                                <p class="copyTextMedium">Meet with session winners on a secure video call</p>
+                            </div>
                         </div>
                     </div>
 
                 </div>
-                <div class="col-sm-4 ">
-                    <div class="content">
-                        <img class="cardpicture" src="assets/online_payments.svg">
-                        <div class="contentSectionContent">
-                            <p class="copyTextMedium">View users bid on your available sessions</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-4">
-                    <div class="content">
-                        <img class="cardpicture" src="assets/SchmoozSession.svg">
-                        <div class="contentSectionContent">
-                            <p class="copyTextMedium">Meet with session winners on a secure video call</p>
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
-    </div>
-    <!-- form -->
-    <aside class="mailinglist">
-        <div id="asideMini">
-            <p class="copyTextLarge">Sign up for Updates!</p>
-            <!-- <img size src="assets/mail_sent.svg" id="asideImg" /> -->
-            <!-- Begin Mailchimp Signup Form -->
-            <p class="centerText">We would love to keep you updated with our development progress!</p>
-            <div id="mc_embed_signup">
-                <form
-                    action="https://app.us20.list-manage.com/subscribe/post?u=6f96ddef3e7d4a0e74013600a&amp;id=7133eda1eb"
-                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                    target="_blank" validate>
-                    <div id="mc_embed_signup_scroll">
+        <!-- form -->
+        <aside class="mailinglist">
+            <div id="asideMini">
+                <p class="copyTextLarge">Sign up for Updates!</p>
+                <!-- <img size src="assets/mail_sent.svg" id="asideImg" /> -->
+                <!-- Begin Mailchimp Signup Form -->
+                <p class="centerText">We would love to keep you updated with our development progress!</p>
+                <div id="mc_embed_signup">
+                    <form
+                        action="https://app.us20.list-manage.com/subscribe/post?u=6f96ddef3e7d4a0e74013600a&amp;id=7133eda1eb"
+                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                        target="_blank" validate>
+                        <div id="mc_embed_signup_scroll">
 
-                        <div class="mc-field-group">
-                            <label for="mce-FNAME">First Name<span class="asterisk">*</span>
-                            </label>
-                            <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
-                        </div>
-                        <div class="mc-field-group">
-                            <label for="mce-LNAME">Last Name<span class="asterisk">*</span>
-                            </label>
-                            <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
-                        </div>
-                        <div class="mc-field-group">
-                            <label for="mce-EMAIL">Email Address<span class="asterisk">*</span>
-                            </label>
-                            <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-                        </div>
-                        <!-- <div class="mc-field-group size1of2">
+                            <div class="mc-field-group">
+                                <label for="mce-FNAME">First Name<span class="asterisk">*</span>
+                                </label>
+                                <input type="text" value="" name="FNAME" class="required" id="mce-FNAME">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-LNAME">Last Name<span class="asterisk">*</span>
+                                </label>
+                                <input type="text" value="" name="LNAME" class="required" id="mce-LNAME">
+                            </div>
+                            <div class="mc-field-group">
+                                <label for="mce-EMAIL">Email Address<span class="asterisk">*</span>
+                                </label>
+                                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                            </div>
+                            <!-- <div class="mc-field-group size1of2">
                             <label for="mce-PHONE">Phone Number </label>
                             <input type="text" name="PHONE" class="" value="" id="mce-PHONE">
                         </div>
@@ -125,62 +148,62 @@
                                 engage
                                 with my audience</label>
                         </div> -->
-                        <div id="mce-responses" class="clear foot">
-                            <div class="response" id="mce-error-response" style="display:none"></div>
-                            <div class="response" id="mce-success-response" style="display:none"></div>
-                        </div>
-                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
-                                name="b_6f96ddef3e7d4a0e74013600a_7133eda1eb" tabindex="-1" value=""></div>
-                        <div class="optionalParent">
-                            <div class="clear foot">
-                                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
-                                    class="button">
+                            <div id="mce-responses" class="clear foot">
+                                <div class="response" id="mce-error-response" style="display:none"></div>
+                                <div class="response" id="mce-success-response" style="display:none"></div>
                             </div>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                    name="b_6f96ddef3e7d4a0e74013600a_7133eda1eb" tabindex="-1" value=""></div>
+                            <div class="optionalParent">
+                                <div class="clear foot">
+                                    <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"
+                                        class="button">
+                                </div>
+                            </div>
+
                         </div>
-
-                    </div>
-            </div>
-            <!--End mc_embed_signup-->
-    </aside>
-    </div>
-
-    <!-- footer for nav -->
-    <footer class="footerContainer">
-        <div class="footerWrap">
-            <div class="footerLinksWrapper">
-                <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle"><a class="footerLink" href="pages/about.html">About</a></h2>
                 </div>
-            </div>
-            <!-- <div class="footerLinksWrapper">
+                <!--End mc_embed_signup-->
+        </aside>
+        </div>
+
+        <!-- footer for nav -->
+        <footer class="footerContainer">
+            <div class="footerWrap">
+                <div class="footerLinksWrapper">
+                    <div class="footerLinkItems">
+                        <h2 class="footerLinkTitle"><a class="footerLink" href="pages/about.html">About</a></h2>
+                    </div>
+                </div>
+                <!-- <div class="footerLinksWrapper">
                 <div class="footerLinkItems">
                     <h2 class="footerLinkTitle"><a class="footerLink" href="pages/privacy.html"
                             target="_blank">Privacy</a></h2>
 
                 </div>
             </div> -->
-            <div class="footerLinksWrapper">
-                <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle" href="pages/terms.html"><a class="footerLink"
-                            href="pages/terms.html">Terms</a>
-                    </h2>
+                <div class="footerLinksWrapper">
+                    <div class="footerLinkItems">
+                        <h2 class="footerLinkTitle" href="pages/terms.html"><a class="footerLink"
+                                href="pages/terms.html">Terms</a>
+                        </h2>
+                    </div>
                 </div>
-            </div>
-            <div class="footerLinksWrapper">
-                <div class="footerLinkItems">
-                    <h2 class="footerLinkTitle"><a class="footerLink" href="mailto:rob@schmooz.com"
-                            target="_blank">Contact</a></h2>
+                <div class="footerLinksWrapper">
+                    <div class="footerLinkItems">
+                        <h2 class="footerLinkTitle"><a class="footerLink" href="mailto:rob@schmooz.com"
+                                target="_blank">Contact</a></h2>
 
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="copyWrap">
-            <h2 class="copyright">© 2022 schmooz</h2>
-        </div>
-    </footer>
-    <script src="./js/index.js" type="module"></script>
-</body>
+            <div class="copyWrap">
+                <h2 class="copyright">© 2022 schmooz</h2>
+            </div>
+        </footer>
+        <script src="./js/index.js" type="module"></script>
+    </body>
 
 </html>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
