--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 and potential customers.
             </p>
 
-            <p class="copyTextMedium"> It's never been easier engage with your fans, and
+            <p class="copyTextMedium"> It's never been easier to engage with your fans, and
                 followers.
 
             </p>
